Atualizando e adicionando mais segurança na feature de login com autenticação(jwt)